WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78728
Box shadow drawing takes an unnecessarily slow code path in some single-shadow, opaque-background cases
https://bugs.webkit.org/show_bug.cgi?id=78728
Summary
Box shadow drawing takes an unnecessarily slow code path in some single-shado...
mitz
Reported
2012-02-15 12:17:55 PST
Box shadow drawing takes an unnecessarily slow code path in some single-shadow, opaque-background cases
Attachments
Let the background cast the shadow directly in some cases where this is possible
(14.26 KB, patch)
2012-02-15 12:31 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-02-15 12:18:23 PST
<
rdar://problem/10870238
>
mitz
Comment 2
2012-02-15 12:31:42 PST
Created
attachment 127213
[details]
Let the background cast the shadow directly in some cases where this is possible
Dave Hyatt
Comment 3
2012-02-15 12:44:42 PST
Comment on
attachment 127213
[details]
Let the background cast the shadow directly in some cases where this is possible It's slightly slower, but you could simplify the patch considerably if you just moved: if (!boxShadowShouldBeAppliedToBackground(determineBackgroundBleedAvoidance(paintInfo.context))) paintBoxShadow(paintInfo, rect, style(), Normal); inside RenderBoxModelObject::paintBoxShadow. Then you wouldn't have to patch a bunch of call sites, and you wouldn't even have to touch InlineFlowBox. I'll leave it up to you, though, since your way is ever-so-slightly faster at the cost of complicating every call site.
mitz
Comment 4
2012-02-15 13:05:28 PST
I can't do this because InlineFlowBox doesn't use determineBackgroundBleedAvoidance(). Thanks for the review!
mitz
Comment 5
2012-02-15 13:58:06 PST
Fixed in <
http://trac.webkit.org/r107836
>.
Tony Chang
Comment 6
2012-02-15 15:23:59 PST
On the chromium bots, this changed 3 pixel results in unexpected ways. In fast/box-shadow/spread.html, the black shapes got smaller.
http://svn.webkit.org/repository/webkit/trunk/LayoutTests/platform/chromium-mac-snowleopard/fast/box-shadow/spread-expected.png
http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6/results/layout-test-results/fast/box-shadow/spread-actual.png
http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6/results/layout-test-results/fast/box-shadow/spread-diff.png
In fast/writing-mode/box-shadow-horizontal-bt.html and fast/writing-mode/box-shadow-vertical-lr.html, the shadow disappeared from the first line of text.
http://svn.webkit.org/repository/webkit/trunk/LayoutTests/platform/chromium-mac-snowleopard/fast/writing-mode/box-shadow-horizontal-bt-expected.png
http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6/results/layout-test-results/fast/writing-mode/box-shadow-horizontal-bt-actual.png
http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_6/results/layout-test-results/fast/writing-mode/box-shadow-horizontal-bt-diff.png
Was there no change for these tests on Apple Mac?
mitz
Comment 7
2012-02-15 15:45:05 PST
Thanks. These differences do occur in OS X WebKit, but I failed to notice them.
mitz
Comment 8
2012-02-15 16:22:41 PST
Filed
bug 78759
.
Tony Chang
Comment 9
2012-02-15 19:21:45 PST
Comment on
attachment 127213
[details]
Let the background cast the shadow directly in some cases where this is possible View in context:
https://bugs.webkit.org/attachment.cgi?id=127213&action=review
> Source/WebCore/rendering/RenderBoxModelObject.cpp:2611 > + for (const FillLayer* next = lastBackgroundLayer->next(); next; ) > + lastBackgroundLayer = next;
This loop is bad. We never iterate after the first iteration. Did you mean to have next = lastBackgroundLayer->next() as the third part of the for statement?
mitz
Comment 10
2012-02-15 19:31:20 PST
(In reply to
comment #9
)
> (From update of
attachment 127213
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=127213&action=review
> > > Source/WebCore/rendering/RenderBoxModelObject.cpp:2611 > > + for (const FillLayer* next = lastBackgroundLayer->next(); next; ) > > + lastBackgroundLayer = next; > > This loop is bad. We never iterate after the first iteration. Did you mean to have next = lastBackgroundLayer->next() as the third part of the for statement?
Yes. Thanks for noticing it!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug